Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
    ],
    "source": [
     "email = \"art.vandelay@vandelay.co\".endwith(\".com\") # False\\\n",
-    "result = emai\n"
+    "result = email.endswith('.com')\n"
    ]
   },
   {
