--- a/index.ipynb
+++ b/index.ipynb
@@ -205,12 +205,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "email = \"art.vandelay@vandelay.co\" # False\\\n",
-    "result = email.endswith('.com')\n"
+    "result = email.endswith('.com')\n",
+    "print(result)"
    ]
   },
   {
