--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,7 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'"
+    "webi'vandelay.com' # 'www.vandelay.com'"
    ]
   },
   {
