Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -239,7 +239,8 @@
    "outputs": [],
    "source": [
     "website = 'vandelay.com' # 'www.vandelay.com'\n",
-    "www = "
+    "www = \"www\"\n",
+    "url = www + website"
    ]
   },
   {
