Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,16 +231,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wwwvandelay.com\n"
+     ]
+    }
+   ],
    "source": [
     "website = 'vandelay.com' # 'www.vandelay.com'\n",
-    "www = \"www\"\n",
-    "url = www + website"
+    "www = \"www.\"\n",
+    "url = www + website\n",
+    "print (url)"
    ]
   },
   {
