--- a/index.ipynb
+++ b/index.ipynb
@@ -267,11 +267,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "number = \"7285553334\"[:3] # 728"
+    "number = \"7285553334\"[:3] # 728\n"
    ]
   },
   {
