--- a/index.ipynb
+++ b/index.ipynb
@@ -271,7 +271,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "number = \"7285553334\"[:3] # 728\n"
+    "number = \"7285553334\"[:4]# 728\n",
+    "\n"
    ]
   },
   {
