--- a/index.ipynb
+++ b/index.ipynb
@@ -267,11 +267,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "number = \"7285553334\"[:4]# 728\n",
+    "print (number)\n",
     "\n"
    ]
   },
